# d-ral-model-python

./: README.md  pyproject.toml
dral/: __init__.py
dral/model/: __init__.py  access.py  field.py  group.py  register.py
tests/: test_field.py  test_group.py  test_register.py
tests/regs/: alfa.py  bravo.py  charlie.py  delta_x.py  echo_x.py
